--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -33,6 +33,8 @@
 \newacronym{snr}{SNR}{Signal to Noise Ratio}
 \newacronym{sd}{SD}{Standard Deviation}
 \newacronym{yaml}{YAML}{Yet Another Markup Language}
+\newacronym{dr}{DR}{Dynamic Range}
+\newacronym{mds}{MDS}{Minimum Detectable Signal}
 
 
 
