--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -529,3 +529,20 @@ volume={71},
 pages={1076-1082},
 url={https://api.semanticscholar.org/CorpusID:28308084}
 }
+
+
+@ARTICLE{CSG22,
+shorthand = {CSG22},
+shortauthor={CSG},
+author={Crescentini, Marco and Syeda, Sana Fatima and Gibiino, Gian Piero},
+journal={IEEE Sensors Journal}, 
+title={Hall-Effect Current Sensors: Principles of Operation and Implementation Techniques}, 
+year={2022},
+volume={22},
+number={11},
+pages={10137-10151},
+abstract={Isolated current sensing is fundamental in several contexts, including power electronics, automotive, and smart buildings. In order to meet the requirements of modern applications, current sensors should feature ever larger bandwidth and dynamic range, as well as reduced power consumption and dimension. Among the available current sensing technologies, Hall-based current sensors have gained an increased popularity owing to their advantages in terms of size, economic feasibility, low power consumption, high dynamic range, and integrability with standard CMOS technologies. This tutorial aims at providing a comprehensive insight into the interdisciplinary world of Hall-effect current sensors, encompassing the fundamental principles of operation, the design of the semiconductor device, the implementation techniques, as well as the methods for sensor modeling and characterization. In particular, this manuscript focuses on Hall-effect sensors realized on standard silicon technologies, and it reviews some typical architectures for the transduction of the measurand current into a magnetic field, as well as the electronic front-end. While this tutorial is mainly addressed to students and non-expert readers, specific design aspects and dispersion effects due to temperature and other external phenomena are also discussed.},
+keywords={Sensors;Magnetic sensors;Voltage measurement;Sensor phenomena and characterization;Magnetic hysteresis;Current measurement;Perpendicular magnetic anisotropy;Current sensing;Hall effect;galvanic isolation;instrumentation amplifier;analog front-end;current-to-magnetic field transduction;sensor characterization;sensor modeling},
+doi={10.1109/JSEN.2021.3119766},
+ISSN={1558-1748},
+month={June},}
