--- a/documentation/thesis/thesis_references_alias.tex
+++ b/documentation/thesis/thesis_references_alias.tex
@@ -1,68 +1,74 @@
-\defcitealias{HMW20}{HMW20}
-
-
-\defcitealias{DRW23}{DRW23}
-
-
-\defcitealias{HH21}{HH21}
-
-
-\defcitealias{AFL23}{AFL23}
-
-
 \defcitealias{BC16}{BC16}
-
-
-\defcitealias{MWO24}{MWO24}
-
-
-\defcitealias{GKT16}{GKT16}
-
-
-\defcitealias{P17}{P17}
-
-
-\defcitealias{WZC21}{WZC21}
-
-
-\defcitealias{BPA22}{BPA22}
-
-
-\defcitealias{CP16}{CP16}
-
-
-\defcitealias{G17}{G17}
 
 
 \defcitealias{DBN08}{DBN08}
 
 
-\defcitealias{MMN19}{MMN19}
+\defcitealias{CP16}{CP16}
 
 
-\defcitealias{O24}{O24}
+\defcitealias{AFL23}{AFL23}
 
 
-\defcitealias{OTW21}{OTW21}
-
-
-\defcitealias{NK16}{NK16}
-
-
-\defcitealias{WAH21}{WAH21}
+\defcitealias{J21}{J21}
 
 
 \defcitealias{SB10}{SB10}
 
 
-\defcitealias{WSB19}{WSB19}
+\defcitealias{H80}{H80}
+
+
+\defcitealias{WZC21}{WZC21}
+
+
+\defcitealias{WAH21}{WAH21}
+
+
+\defcitealias{BPA22}{BPA22}
 
 
 \defcitealias{OTW19}{OTW19}
 
 
-\defcitealias{H80}{H80}
+\defcitealias{MWO24}{MWO24}
+
+
+\defcitealias{G17}{G17}
+
+
+\defcitealias{DRW23}{DRW23}
+
+
+\defcitealias{HMW20}{HMW20}
+
+
+\defcitealias{O24}{O24}
+
+
+\defcitealias{WSB19}{WSB19}
+
+
+\defcitealias{P17}{P17}
+
+
+\defcitealias{CSG22}{CSG22}
+
+
+\defcitealias{HH21}{HH21}
+
+
+\defcitealias{NK16}{NK16}
+
+
+\defcitealias{OTW21}{OTW21}
 
 
 \defcitealias{OB20}{OB20}
+
+
+\defcitealias{GKT16}{GKT16}
+
+
+\defcitealias{MMN19}{MMN19}
 
